# api-test

./: .gitignore  pyproject.toml
src/proto/: cafenow.proto  cafenow_pb2.py  cafenow_pb2_grpc.py
src/test/: grpc_test.py  kakao_local_api.py  main.py  mongodb.py
